--- a/searchui-servlet/pom.xml
+++ b/searchui-servlet/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.attivio.suit</groupId>
+    <groupId>com.pki.suit</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>searchui-servlet</artifactId>
+  <artifactId>pki-searchui-servlet</artifactId>
   <packaging>war</packaging>
-  <name>searchui/servlet</name>
+  <name>pki-searchui/servlet</name>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -30,8 +30,8 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>com.attivio.suit</groupId>
-      <artifactId>searchui-frontend</artifactId>
+      <groupId>com.pki.suit</groupId>
+      <artifactId>pki-searchui-frontend</artifactId>
       <version>${project.parent.version}</version>
       <type>zip</type>
       <classifier>dist</classifier>
