Initial tweaks for PKI
- fixed `mvn spring-boot:run`
- fixed issue with reverse proxied AIE
- tweaked config to be in line with demo system and not suck

--- a/searchui-servlet/application.properties
+++ b/searchui-servlet/application.properties
@@ -10,7 +10,7 @@
 
 ##################################################################################
 # HTTPS
-# Use these properties to set up the servlet to use SSL for secure communication.  
+# Use these properties to set up the servlet to use SSL for secure communication.
 ##################################################################################
 
 # The port to run the servlet on
@@ -36,34 +36,34 @@
 
 ##################################################################################
 # Attivio Back-End Configuration
-# Use these properties to tell the servlet how to talk to the Attivio servers. 
+# Use these properties to tell the servlet how to talk to the Attivio servers.
 ##################################################################################
 
 # The protocol to use for communicating with Attivio. If the Attivio server
 # is using SSL, change this to "https"
-suit.attivio.protocol=http
+suit.attivio.protocol=https
 
 # The hostname of the Attivio server
-suit.attivio.hostname=localhost
+suit.attivio.hostname=awsattiviodemo.pkiapps.net
 
 # The port for the Attivio server
-suit.attivio.port=17000
+suit.attivio.port=443
 
 # The username to use when communicating with the Attivio server
 suit.attivio.username=aieadmin
 
 # The password for that username
-suit.attivio.password=attivio
+suit.attivio.password=chemicals-footsie-dreamt-scribing-shortly-bankroll
 
 # The authentication token to use instead of the username/password for managed Attivio
 # instances in the cloud. If this is set, the username and password parameters are
-# ignored and this is appended as a parameter to the URI used for forwarding REST requests. 
+# ignored and this is appended as a parameter to the URI used for forwarding REST requests.
 #suit.attivio.authToken=
 
 
 ##################################################################################
 # Search UI Application Configuration
-# Use these properties to tell the servlet about your Search UI application. 
+# Use these properties to tell the servlet about your Search UI application.
 ##################################################################################
 
 # These are the routes to allow for your application. Trying to access any other
@@ -75,13 +75,13 @@ suit.attivio.routes=/,/landing,/results,/insights,/doc360,/login,/loggedout,/err
 
 # This is the location of the configuration.properties.js file that controls your
 # Search UI application.
-suit.attivio.configuration=
+suit.attivio.configuration=../searchui-frontend/configuration.properties.js
 
 # This is the location of the users.xml file for your application. If you are using
 # XML-based authentication (i.e., the authType defined in the configuration.properties.js
 # file is "XML," this is required. If you are using SAML-based SSO, this can be left
 # unset or commented out.
-suit.attivio.users=
+suit.attivio.users=../searchui-frontend/users.xml
 
 
 ##################################################################################
@@ -123,13 +123,13 @@ suit.attivio.users=
 # This is the port the load balancer is running on.
 #saml.sso.context-provider.lb.server-port=443
 
-# This is the server name for the load balancer. 
+# This is the server name for the load balancer.
 #saml.sso.context-provider.lb.server-name=
 
 # This is the context path for the load balancer
 #saml.sso.context-provider.lb.context-path=/searchui
 
-# This determines whether the port number is included in the generated URL 
+# This determines whether the port number is included in the generated URL
 #saml.sso.context-provider.lb.include-server-port-in-request-url=false
 
 # This is the base URL used when generating SAML metadata with the servlet
@@ -143,7 +143,7 @@ suit.attivio.users=
 ##################################################################################
 # Logging Configuration
 # Logging can be controlled by adding a property whose name starts with
-# "logging.level." followed by the fully-qualified name of the class to log and 
+# "logging.level." followed by the fully-qualified name of the class to log and
 # setting the property's value to the logging level you want.
 ##################################################################################
 
@@ -160,3 +160,4 @@ suit.attivio.users=
 # when running the executable WAR directly in a console as it won't affect the
 # servlet container's logs.
 spring.output.ansi.enabled=DETECT
+server.contextPath=/pki-searchui
