--- a/searchui-frontend/pom.xml
+++ b/searchui-frontend/pom.xml
@@ -12,10 +12,12 @@
   <description>PKI Search UI Framework, UI component</description>
   <properties>
     <frontend.node.version>v8.9.4</frontend.node.version>
+	<webpack.args>--output-path=${project.build.directory}/dist</webpack.args>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+<!--
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
@@ -44,11 +46,12 @@
               <goal>webpack</goal>
             </goals>
             <configuration>
-              <arguments>--output-path=${project.build.directory}/dist</arguments>
+              <arguments>${webpack.args}</arguments>
             </configuration>
           </execution>
         </executions>
       </plugin>
+-->
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
