--- a/searchui-frontend/package.json
+++ b/searchui-frontend/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint src --ext .js --ext .jsx",
     "build": "webpack --progress",
     "watch": "webpack --watch --progress --output-path ",
-    "prod": "webpack -p --progress",
+    "prod": "webpack --config webpack.prod.config.js -p --progress",
     "styleguide": "styleguidist build",
     "styleguide:serve": "styleguidist server"
   },
@@ -62,6 +62,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -84,6 +85,8 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
+    "uglify-es": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^0.5.9",
     "webpack": "^3.2.0",
     "webpack-encoding-plugin": "^0.2.1",
