--- a/searchui-frontend/package.json
+++ b/searchui-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sisu-llc/pki-searchui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Framework for building search user-interface applications on top of the Attivio platform.",
   "keywords": [
     "Attivio",
@@ -11,7 +11,7 @@
     "React",
     "react-component"
   ],
-  "homepage": "http://www.attivio.com",
+  "homepage": "http://sisu.io",
   "bugs": {
     "url": "https://github.com/sisu-llc/pki-searchui/issues",
     "email": "bugs@sisu.io"
@@ -19,20 +19,21 @@
   "license": "SEE LICENSE IN ../LICENSE.txt",
   "author": "Sisu Integrated Services, LLC",
   "main": "index.js",
+  "sideEffects": false,
   "repository": "https://github.com/sisu-llc/pki-searchui",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "flow": "flow --show-all-errors",
     "lint": "eslint src --ext .js --ext .jsx",
-    "build": "webpack --progress",
-    "watch": "webpack --watch --progress --output-path ",
-    "prod": "webpack --config webpack.prod.config.js -p --progress",
+    "build": "webpack --config webpack.dev.js --progress",
+    "watch": "webpack --watch --config webpack.dev.js --progress --output-path ",
+    "prod": "webpack --config webpack.prod.js --progress",
     "styleguide": "styleguidist build",
     "styleguide:serve": "styleguidist server"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-draw": "^1.0.4",
-    "@sisu-llc/pki-suit": "0.1.19",
+    "@mapbox/mapbox-gl-draw": "^1.0.7",
+    "@sisu-llc/pki-suit": "^0.1.23",
     "babel-polyfill": "^6.26.0",
     "es6-object-assign": "^1.1.0",
     "es6-promise": "^4.1.1",
@@ -42,7 +43,7 @@
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "react": "^15.6.2",
-    "react-addons-shallow-compare": "^0.14",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-bootstrap": "^0.31.1",
     "react-dates": "^12.7.1",
     "react-docgen": "^2.17.0",
@@ -56,18 +57,17 @@
   },
   "devDependencies": {
     "ajv": "^5.2.2",
-    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "empty": "^0.10.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "15.1.0",
@@ -75,21 +75,21 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.11.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^1.1.11",
     "flow-bin": "^0.50.0",
-    "html-webpack-include-assets-plugin": "0.0.7",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-include-assets-plugin": "^1.0.4",
+    "html-webpack-plugin": "^3.2.0",
     "inferno": "^3.10.1",
     "less": "^2.7.2",
-    "less-loader": "^4.0.5",
-    "style-loader": "^0.18.2",
-    "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.2.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
     "webpack-encoding-plugin": "^0.2.1",
+    "webpack-merge": "^4.1.2",
     "xml-loader": "^1.2.1"
   }
 }
