--- a/module/bin/pom.xml
+++ b/module/bin/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.pki.suit</groupId>
+    <groupId>com.attivio.suit</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>pki-searchui-module</artifactId>
-  <name>pki-searchui/module</name>
+  <artifactId>searchui-module</artifactId>
+  <name>searchui/module</name>
   <description>Attivio Search UI Framework, external module component</description>
   <dependencies>
     <dependency>
-      <groupId>com.pki.suit</groupId>
-      <artifactId>pki-searchui-frontend</artifactId>
+      <groupId>com.attivio.suit</groupId>
+      <artifactId>searchui-frontend</artifactId>
       <version>${project.parent.version}</version>
       <type>zip</type>
       <classifier>dist</classifier>
