--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.pki.suit</groupId>
+    <groupId>com.pki.searchui</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.2-SNAPSHOT</version>
   </parent>
-  <artifactId>pki-searchui-frontend</artifactId>
+  <artifactId>frontend</artifactId>
   <packaging>pom</packaging>
-  <name>pki-searchui/frontend</name>
-  <description>PKI Search UI Framework, UI component</description>
+  <name>Front End</name>
+  <description>The front-end JavaScript application</description>
   <properties>
     <frontend.node.version>v8.9.4</frontend.node.version>
 	<webpack.args>-p --output-path=${project.build.directory}/dist</webpack.args>
