--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.pki.suit</groupId>
+  <groupId>com.pki.searchui</groupId>
   <artifactId>parent</artifactId>
   <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>pki-searchui/parent</name>
-  <description>Framework for building search user-interface applications on top of the Attivio platform</description>
+  <name>Parent POM</name>
+  <description>Parent for building the components of a SUIT-based application.</description>
   <licenses>
     <license>
       <name>GNU General Public License (GPL), Version 3.0</name>
