--- a/searchui-frontend/package.json
+++ b/searchui-frontend/package.json
@@ -26,7 +26,7 @@
     "flow": "flow --show-all-errors",
     "lint": "eslint src --ext .js --ext .jsx",
     "build": "webpack --config webpack.dev.js --progress",
-    "watch": "webpack --watch --config webpack.dev.js --progress --output-path ",
+    "watch": "webpack-dev-server --config webpack.hot.js",
     "prod": "webpack --config webpack.prod.js --progress",
     "styleguide": "styleguidist build",
     "styleguide:serve": "styleguidist server"
@@ -84,6 +84,7 @@
     "flow-bin": "^0.50.0",
     "html-webpack-include-assets-plugin": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "inferno": "^3.10.1",
     "less": "^2.7.2",
     "less-loader": "^4.1.0",
@@ -92,6 +93,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.3",
     "webpack-encoding-plugin": "^0.2.1",
     "webpack-merge": "^4.1.2",
     "xml-loader": "^1.2.1"
