Ok, live reloading and dev for real this time :-)

--- a/searchui-frontend/package.json
+++ b/searchui-frontend/package.json
@@ -67,6 +67,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai-enzyme": "^0.8.0",
     "clean-webpack-plugin": "^0.1.19",
+    "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "empty": "^0.10.1",
