--- a/module/bin/pom.xml
+++ b/module/bin/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>parent</artifactId>
     <version>1.0.2-SNAPSHOT</version>
   </parent>
-  <artifactId>module</artifactId>
+  <artifactId>searchui-module</artifactId>
   <name>Module</name>
   <description>Wraps the front-end application in an Attivio module</description>
   <dependencies>
