--- a/servlet/application.properties
+++ b/servlet/application.properties
@@ -74,20 +74,22 @@ suit.attivio.password=chemicals-footsie-dreamt-scribing-shortly-bankroll
 suit.attivio.routes=/,/landing,/results,/insights,/doc360,/login,/loggedout,/error
 
 # This is the location of the configuration.properties.js file that controls your
-# Search UI application.
-suit.attivio.configuration=../searchui-frontend/configuration.properties.js
+# Search UI application. It should just be a file path (use forward slashes even
+# on Windows operating systems).
+suit.attivio.configuration=../frontend/configuration.properties.js
 
 # This is the location of the users.xml file for your application. If you are using
 # XML-based authentication (i.e., the authType defined in the configuration.properties.js
 # file is "XML," this is required. If you are using SAML-based SSO, this can be left
 # unset or commented out.
-suit.attivio.users=../searchui-frontend/users.xml
+suit.attivio.users=../frontend/users.xml
 
 # If you are running the servlet as an executable JAR (or, for example, directly
-# executing the SuitBackApplication class in Eclipse), you may want to set the
-# context path so the built-in Tomcat will serve the application at the right
-# URL. Normally, this will be obtained from the name of the WAR file deployed to
-# Tomcat and this property isn't necessary.
+# executing the SuitBackApplication class in Eclipse for debugging purposes),
+# you may want to set the context path so the built-in Tomcat will serve the
+# application at the right URL. Normally, however, the context path is obtained
+# from the name of the WAR file deployed to the server and specifying this property
+# isn't necessary.
 #server.contextPath=/searchui
 
 
@@ -95,13 +97,14 @@ suit.attivio.users=../searchui-frontend/users.xml
 # SAML Configuration
 # Use these properties to tell the servlet about your SAML Identity Provider.
 # In addition, make sure to set authType in configuration.properties.js to "SAML."
+# For non-SAML use cases, they should remain commented out.
 ##################################################################################
 
-# This is the name of the profile to use for configuration. It should be set to
-# "basic" for non-SAML use cases and to "saml" for SAML use cases. To enable SAML
-# authentication, this must be set in addition to setting the remaining properties
-# in this section (security.saml.entityId, etc.).
-spring.profiles.active=basic
+# The configuration profile needs to be set to the value "saml" to allow trigger
+# configuring the servlet to use SAML authentication. When you uncomment this
+# property, you will also need to set the remaining properties in this section to
+# configure the specifics of your SAML authentication process.
+#spring.profiles.active=saml
 
 # This is the name of the application registered with your identity provider
 # It may be a simple string or the URL to your server. See your IdP's documentation
@@ -120,26 +123,27 @@ spring.profiles.active=basic
 # This is the default URL that the user will be redirected to after successfully
 # logging on via SAML. It is only used if there was no saved request (e.g, if
 # the user hadn't been asked to log in after trying to go to a particular URL).
-# The default value is / which should be fine for most SAIL-based applications.  
+# The default value is / which should be fine for most SAIL-based applications.
 #security.saml.defaultSuccessUrl=
-  
+
 # This is the default URL that the user will be redirected to after successfully
-# logging out via SAML. The default value is /loggedout. 
+# logging out via SAML. The default value is /loggedout.
 #security.saml.defaultLogoutUrl=
 
 # This is the certificate file to use for communicating securely with your IdP.
 # It should be a URI (generally a file:/// URI).
-#security.saml.keyDerLocation=file:///LOCATION
+#security.saml.keyDerLocation=
 
 # This is the public key file to use for communicating securely with your IdP.
 # It should be a URI (generally a file:/// URI).
-#security.saml.keyPemLocation=file:///LOCATION
+#security.saml.keyPemLocation=
 
 
 ##################################################################################
 # SAML + Load-Balancer Configuration
 # Use these properties to configure the SAML SSL when running the servlet behind
-# a load balancer, in addition to the SAML Configuration parameters above.
+# a load balancer, in addition to the SAML Configuration parameters above. For
+# non-SAML use cases, they should remain commented out.
 ##################################################################################
 
 # Set this to true to enable the load-balancer configuration
@@ -176,7 +180,7 @@ spring.profiles.active=basic
 ##################################################################################
 
 # For example:
-# To see information about the REST API calls proxied to the Attivio server:   
+# To see information about the REST API calls proxied to the Attivio server:
 #logging.level.com.attivio.suitback.controllers.RestProxy=TRACE
 # To see information about the way the servlet serves the configuration and users files:
 #logging.level.com.attivio.suitback.controllers.ConfigController=TRACE
