--- a/servlet/application.properties
+++ b/servlet/application.properties
@@ -138,6 +138,12 @@ suit.attivio.users=../frontend/users.xml
 # It should be a URI (generally a file:/// URI).
 #security.saml.keyPemLocation=
 
+# This might need to be uncommented if you are integrating with Microsoft's
+# Azure AD identity provider and you see an error saying "The SAML authentication
+# request property 'Scoping/ProxyCount' is not supported." In other cases, you
+# should it as is, commented out.
+#saml.sso.profile-options.include-scoping=false
+
 
 ##################################################################################
 # SAML + Load-Balancer Configuration
