--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -11,13 +11,13 @@
   <name>Front End</name>
   <description>The front-end JavaScript application</description>
   <properties>
-    <frontend.node.version>v8.9.4</frontend.node.version>
-	<webpack.args>-p --output-path=${project.build.directory}/dist</webpack.args>
+    <frontend.node.version>v8.11.2</frontend.node.version>
+    <webpack.args>--config webpack.dev.js --progress</webpack.args>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
-<!--
+
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
@@ -51,7 +51,7 @@
           </execution>
         </executions>
       </plugin>
--->
+
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
